...
                //one init of controller is enough

                GetBuilder<NewNotificationController>(
                  init: NewNotificationController(),
                  builder: (newNotificationController) {
                    return CustomTextField(
                      key: const Key("title field"),
                      counterTextColor: Theme.of(context).backgroundColor,
                      counterBpxColor: Theme.of(context).primaryColor,
                      textColor: Theme.of(context).primaryColor,
                      backgroundColor:
                          Theme.of(context).primaryColor.withOpacity(.2),
                      // key: newNotificationController.titleTextFieldKey,
...
                  },
                ),
                const SizedBox(height: 20),
                GetBuilder<NewNotificationController>(
                  builder: (newNotificationController) {
                    return CustomTextField(
                      key: const Key("description field"),
                      counterBpxColor: Theme.of(context).primaryColor,
                      counterTextColor: Theme.of(context).backgroundColor,
                      textColor: Theme.of(context).primaryColor,
                      backgroundColor:
                          Theme.of(context).primaryColor.withOpacity(.2),
                      // key: newNotificationController.descriptionTextFieldKey,
...
                  builder: (newNotificationController) {
                    return Row(
                      mainAxisAlignment: MainAxisAlignment.spaceBetween,
                      crossAxisAlignment: CrossAxisAlignment.center,
                      children: <Widget>[
                        Expanded(
                          key: const Key("date icon"),
                          child: GestureDetector(
                            onTap: () async {
                              var gettedDate =
                                  await dateController.getFullDateFromUser();
                              dateController.fullDate(gettedDate);
                            },
...
                              text: "date",
                              icon: Icons.calendar_month_outlined,
                            ),
                          ),
                        ),
                        Expanded(
                          key: const Key("daily icon"),
                          child: GestureDetector(
                            onTap: () {
                              newNotificationController
                                  .toggleRepeatedOptionBoolean();

                              // print(
...
                                icon: Icons.repeat,
                              ),
                            ),
                          ),
                        ),
                        Expanded(
                          key: const Key("auto delete icon"),
                          child: GestureDetector(
                            onTap: () {
                              newNotificationController
                                  .toggleAlarmOptionBoolean();
                            },
                            child: Opacity(
...
                ),

                const Spacer(),
                SizedBox(
                  width: double.infinity,
                  child: CustomButton(
                    key: const Key("create button"),
                    onPressed: () {
                      newNotificationController.addNewNotification(
                        newNotificationController.titleController.text.trim(),
                        newNotificationController.descriptionController.text
                            .trim(),
                        dateController.date,
...
