...
    {
      "icon": Icons.home,
      "tooltip": "Home",
    },
    {
      "icon": Icons.search,
      "tooltip": "Search",
    },
    {
      "icon": Icons.favorite,
      "tooltip": "Favorites",
    },
    {
      "icon": Icons.settings,
      "tooltip": "Settings",
    },
  ];
...
