...
                            colors: [
                              AppColors.darkBlack,
                              AppColors.darkBlack.withOpacity(.5),
                            ],
                            values: const [
                              40,
                              30,
                              20,
                              40,
                              40,
                              60,
                              50,
                              10,
...
                        fontWeight: FontWeight.w500),
                  ),
                  const SizedBox(
                    height: 40,
                  ),
                  CustomButton(
                      key: const Key("getStartedButton"),
                      radiusValue: 10,
                      shouldReverseColors: false,
                      onPressed: () {
                        Get.toNamed('/getUsername');
                      },
                      text: "get started".capitalizeAllWordsFirstLetter()),
...
